tests/baselines/reference/privateVisibility.errors.txt
privateVisibility.ts(9,3): error TS2341: Property 'privMeth' is private and only accessible within class 'Foo'.
privateVisibility.ts(10,3): error TS2341: Property 'privProp' is private and only accessible within class 'Foo'.
privateVisibility.ts(15,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
privateVisibility.ts(24,3): error TS2341: Property 'priv' is private and only accessible within class 'C'.


==== privateVisibility.ts (4 errors) ====
    class Foo {
    	public pubMeth() {this.privMeth();}
    	private privMeth() {}
    	public pubProp = 0;
    	private privProp = 0;
    }
    
    var f = new Foo();
    f.privMeth(); // should not work
      ~~~~~~~~
!!! error TS2341: Property 'privMeth' is private and only accessible within class 'Foo'.
    f.privProp; // should not work
      ~~~~~~~~
!!! error TS2341: Property 'privProp' is private and only accessible within class 'Foo'.
    
    f.pubMeth(); // should work
    f.pubProp; // should work
    
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class C { public pub = 0; private priv = 1; }
        export var V = 0;
    }
    
    
    var c = new M.C();
    
    c.pub; // should work
    c.priv; // should not work
      ~~~~
!!! error TS2341: Property 'priv' is private and only accessible within class 'C'.
    
    